hphp/hack/test/ifc/check/higher_order_functions.php.exp
=== IFC analysis results for higher_order_functions.php
File "higher_order_functions.php", line 46, characters 3-20:
Context-implicit policy leaks into `PUBLIC` via `pc`. (Typing[4380])
  File "higher_order_functions.php", line 9, characters 14-23:
  Leakage sink
File "higher_order_functions.php", line 46, characters 3-20:
Context-implicit policy leaks into `PUBLIC` via `Exception`. (Typing[4380])
  File "higher_order_functions.php", line 9, characters 14-23:
  Leakage sink
File "higher_order_functions.php", line 46, characters 3-20:
Context-implicit policy leaks into `PUBLIC` via `C`. (Typing[4380])
  File "higher_order_functions.php", line 9, characters 14-23:
  Leakage sink
File "higher_order_functions.php", line 46, characters 3-20:
Context-implicit policy leaks into `PUBLIC` via `$f'2`. (Typing[4380])
  File "higher_order_functions.php", line 9, characters 14-23:
  Leakage sink
File "higher_order_functions.php", line 46, characters 3-20:
Context-implicit policy leaks into `PUBLIC` via `$f`. (Typing[4380])
  File "higher_order_functions.php", line 9, characters 14-23:
  Leakage sink
File "higher_order_functions.php", line 52, characters 5-9:
Context-implicit policy leaks into `pc'1` via `FOO`. (Typing[4380])
  File "higher_order_functions.php", line 51, characters 7-13:
  Another program point contributing to the leakage
  File "higher_order_functions.php", line 12, characters 15-26:
  Leakage source
File "higher_order_functions.php", line 52, characters 5-9:
Context-implicit policy leaks into `exn` via `FOO`. (Typing[4380])
  File "higher_order_functions.php", line 51, characters 7-13:
  Another program point contributing to the leakage
  File "higher_order_functions.php", line 12, characters 15-26:
  Leakage source
File "higher_order_functions.php", line 59, characters 3-12:
Context-implicit policy leaks into `PUBLIC` via `A_lump`. (Typing[4380])
  File "higher_order_functions.php", line 15, characters 12-13:
  Leakage sink
